[package]
name = "sac"
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"

[dependencies.bincode]
version = "2.0.0-rc.3"
default-features = false
features = ["derive"]

[dependencies.byteorder]
version = "1.5.0"
default-features = false

[features]
default = ["std"]
std = ["bincode/std", "byteorder/std"]
alloc = ["bincode/alloc"]